--- a/.github/workflows/routinator.yml
+++ b/.github/workflows/routinator.yml
@@ -3,23 +3,28 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *'  # 每天 UTC 午夜运行
 
 jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Run Routinator
         run: |
           docker pull nlnetlabs/routinator:latest
           docker run --rm -v $(pwd)/data:/var/lib/routinator nlnetlabs/routinator init --accept-arin-rpa
           docker run --rm -d -p 9556:9556 -v $(pwd)/data:/var/lib/routinator nlnetlabs/routinator server --http 0.0.0.0:9556
-      - name: Fetch and Save VRPs
+
+      - name: Fetch VRP Data
         run: |
-          sleep 10  # 等待服务启动
+          sleep 10  # 等待 Routinator 启动
           curl -s http://localhost:9556/api/v1/vrps/json > vrps.json
-      - uses: actions/upload-artifact@v3
+
+      - name: Upload VRP Data
+        uses: actions/upload-artifact@v4  # 使用 v4 替代弃用的 v3
         with:
           name: rpki-vrps
           path: vrps.json
